2024-03-14 Konstantin Kushnir <chpock@gmail.com>
	* Bumped minimum Tcl version to 8.5.0
	* Enable compiler warnings
	* Fix minor issues from compiler warnings

2024-03-14 Konstantin Kushnir <chpock@gmail.com>
	* Add support for xz compression and use it by default

2012-05-22 Wojciech Kocjan <zoro2@users.sourceforge.net>
	* scripts/writer.tcl: Use [array startsearch]/[array next]/[array anymore] instead of [array get] to package small files - reduces memory usage

2012-03-12 Wojciech Kocjan <zoro2@users.sourceforge.net>
	* generic/pages.c: Added support for dataoffset command to return offset to specific pages
	* generic/pages.h:
	* generic/pagesCmd.c:
	* scripts/pages.tcl:
	* tests/pages.test:

2012-02-28 Wojciech Kocjan <zoro2@users.sourceforge.net>
	* generic/pages.c: Added more verbose error information to cookfs
	* generic/pages.h:
	* generic/pagesCmd.c:
	* scripts/pages.tcl:
	* tests/vfs.test:
	* tests/pages.test:

2011-12-20 Wojciech Kocjan <zoro2@users.sourceforge.net>
	* generic/pages.c: Added support for getting currently set compression using pages and mount command
	* generic/pagesCompr.c:
	* generic/pages.h:
	* generic/pagesCompr.h:
	* generic/pagesCmd.c:
	* scripts/pages.tcl:
	* scripts/cookvfs.tcl:
	* tests/vfs.test:
	* tests/pages.test:

2011-12-15 Wojciech Kocjan <zoro2@users.sourceforge.net>
	* scripts/cookvfs.tcl: Added support for changing compression on the fly in VFS layer
	* scripts/pages.tcl:
	* tests/common.tcl:
	* tests/vfs.test:

2011-12-14 Wojciech Kocjan <zoro2@users.sourceforge.net>
	* generic/pages.c: Added option to change compression on the fly
	* generic/pages.h:
	* generic/pagesCmd.c:
	* scripts/pages.tcl:
	* tests/pages.test:

2011-12-07 Wojciech Kocjan <zoro2@users.sourceforge.net>
        * generic/pages.c: Added support for -alwayscompress flag
        * generic/pagesCompr.c:
        * generic/pages.h:
        * generic/pagesCmd.c:
        * scripts/pages.tcl:
	* tests/pages.test:
